--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
         applicationId "com.example.uplace"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 19//flutter.minSdkVersion <-- removi e troquei por 19 TROCAS
+        minSdkVersion flutter.minSdkVersion//flutter.minSdkVersion <-- removi e troquei por 19 TROCAS
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
